# trips

./: README.md  assignment.md  pyproject.toml
src/trips/: __init__.py  app.py  trips.ipynb
