[project]
name = "trips"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Andy Miles", email = "andy@proquickly.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
trips = "trips:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-bdd>=8.1.0",
    "pytest-cov>=6.1.1",
]
